test/valid/56307_shadowingFunction/shadowFunction.agu
-- Author: 56307, Denis Ungureanu
let shadowTest (x) : Int -> Int =
  let y : Int = x + 10 ;
  let x : Int = y * 2 ;
  x
  
let main(_) : Unit -> Unit = print(shadowTest(5))