test/invalid-syntax/56334_missingEquals/missingEquals.agu
-- Author: fc56334, Goncalo Lopes

let x : Int = 10;
let y : Int x+2